Clear picked status of models when clearing selection

Task-number: QTBUG-132107
Change-Id: I0fc8f79e4afbb0935ca1a625e37cc2e6b9f231f9
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 715734e1f71cbc166fed0a76454068a255317c7e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 97761510b1bd1cf8b54c5017bb0a34138120cb12)